make navbar sticky and prevent content overlap

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Sen:wght@400;600;700&display=swap');
+
+body {
+  margin: 0;
+  padding-top: 56px; 
+  font-family: "Inter", system-ui, sans-serif;
+}
  
 .header {
   width: 100%;
@@ -11,6 +17,10 @@
   font-family: 'Sen', sans-serif;
   box-sizing: border-box;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
 }
  
 .header-left {
@@ -38,6 +48,7 @@
  
 .search-container {
   width: 550px;
+  position: relative;
 }
  
 .search-container input {
@@ -48,6 +59,7 @@
   padding: 0 18px 0 40px;
   font-size: 16px;
   outline: none;
+  box-sizing: border-box;
 }
  
 .search-container .search-icon {
